mobile overflow fix v2

--- a/src/Form.css
+++ b/src/Form.css
@@ -70,6 +70,9 @@
     height: auto;
     overflow-y: scroll;
   }
+  * {
+    -webkit-overflow-scrolling: touch;
+}
 }
 
 @media (min-width: 1440px) {
